tests/snapshots/sqlparser_snapshot__generic__tpch_06.sql.snap
---
source: tests/sqlparser_snapshot.rs
expression: stmts
---
- Query:
    with: ~
    body:
      Select:
        distinct: ~
        top: ~
        projection:
          - ExprWithAlias:
              expr:
                Function:
                  name:
                    - value: sum
                      quote_style: ~
                  args:
                    - Unnamed:
                        Expr:
                          BinaryOp:
                            left:
                              Identifier:
                                value: l_extendedprice
                                quote_style: ~
                            op: Multiply
                            right:
                              Identifier:
                                value: l_discount
                                quote_style: ~
                  filter: ~
                  null_treatment: ~
                  over: ~
                  distinct: false
                  special: false
                  order_by: []
              alias:
                value: revenue
                quote_style: ~
        into: ~
        from:
          - relation:
              Table:
                name:
                  - value: lineitem
                    quote_style: ~
                alias: ~
                args: ~
                with_hints: []
                version: ~
                partitions: []
            joins: []
        lateral_views: []
        selection:
          BinaryOp:
            left:
              BinaryOp:
                left:
                  BinaryOp:
                    left:
                      BinaryOp:
                        left:
                          Identifier:
                            value: l_shipdate
                            quote_style: ~
                        op: GtEq
                        right:
                          TypedString:
                            data_type: Date
                            value: 1994-01-01
                    op: And
                    right:
                      BinaryOp:
                        left:
                          Identifier:
                            value: l_shipdate
                            quote_style: ~
                        op: Lt
                        right:
                          BinaryOp:
                            left:
                              TypedString:
                                data_type: Date
                                value: 1994-01-01
                            op: Plus
                            right:
                              Interval:
                                value:
                                  Value:
                                    SingleQuotedString: "1"
                                leading_field: Year
                                leading_precision: ~
                                last_field: ~
                                fractional_seconds_precision: ~
                op: And
                right:
                  Between:
                    expr:
                      Identifier:
                        value: l_discount
                        quote_style: ~
                    negated: false
                    low:
                      BinaryOp:
                        left:
                          Value:
                            Number:
                              - ".06"
                              - false
                        op: Minus
                        right:
                          Value:
                            Number:
                              - "0.01"
                              - false
                    high:
                      BinaryOp:
                        left:
                          Value:
                            Number:
                              - ".06"
                              - false
                        op: Plus
                        right:
                          Value:
                            Number:
                              - "0.01"
                              - false
            op: And
            right:
              BinaryOp:
                left:
                  Identifier:
                    value: l_quantity
                    quote_style: ~
                op: Lt
                right:
                  Value:
                    Number:
                      - "24"
                      - false
        group_by:
          Expressions: []
        cluster_by: []
        distribute_by: []
        sort_by: []
        having: ~
        named_window: []
        qualify: ~
    order_by: []
    limit: ~
    limit_by: []
    offset: ~
    fetch: ~
    locks: []

