tests/snapshots/sqlparser_snapshot__generic__tpch_09.sql.snap
---
source: tests/sqlparser_snapshot.rs
expression: stmts
---
- Query:
    with: ~
    body:
      Select:
        distinct: ~
        top: ~
        projection:
          - UnnamedExpr:
              Identifier:
                value: nation
                quote_style: ~
          - UnnamedExpr:
              Identifier:
                value: o_year
                quote_style: ~
          - ExprWithAlias:
              expr:
                Function:
                  name:
                    - value: sum
                      quote_style: ~
                  args:
                    - Unnamed:
                        Expr:
                          Identifier:
                            value: amount
                            quote_style: ~
                  filter: ~
                  null_treatment: ~
                  over: ~
                  distinct: false
                  special: false
                  order_by: []
              alias:
                value: sum_profit
                quote_style: ~
        into: ~
        from:
          - relation:
              Derived:
                lateral: false
                subquery:
                  with: ~
                  body:
                    Select:
                      distinct: ~
                      top: ~
                      projection:
                        - ExprWithAlias:
                            expr:
                              Identifier:
                                value: n_name
                                quote_style: ~
                            alias:
                              value: nation
                              quote_style: ~
                        - ExprWithAlias:
                            expr:
                              Extract:
                                field: Year
                                expr:
                                  Identifier:
                                    value: o_orderdate
                                    quote_style: ~
                            alias:
                              value: o_year
                              quote_style: ~
                        - ExprWithAlias:
                            expr:
                              BinaryOp:
                                left:
                                  BinaryOp:
                                    left:
                                      Identifier:
                                        value: l_extendedprice
                                        quote_style: ~
                                    op: Multiply
                                    right:
                                      Nested:
                                        BinaryOp:
                                          left:
                                            Value:
                                              Number:
                                                - "1"
                                                - false
                                          op: Minus
                                          right:
                                            Identifier:
                                              value: l_discount
                                              quote_style: ~
                                op: Minus
                                right:
                                  BinaryOp:
                                    left:
                                      Identifier:
                                        value: ps_supplycost
                                        quote_style: ~
                                    op: Multiply
                                    right:
                                      Identifier:
                                        value: l_quantity
                                        quote_style: ~
                            alias:
                              value: amount
                              quote_style: ~
                      into: ~
                      from:
                        - relation:
                            Table:
                              name:
                                - value: part
                                  quote_style: ~
                              alias: ~
                              args: ~
                              with_hints: []
                              version: ~
                              partitions: []
                          joins: []
                        - relation:
                            Table:
                              name:
                                - value: supplier
                                  quote_style: ~
                              alias: ~
                              args: ~
                              with_hints: []
                              version: ~
                              partitions: []
                          joins: []
                        - relation:
                            Table:
                              name:
                                - value: lineitem
                                  quote_style: ~
                              alias: ~
                              args: ~
                              with_hints: []
                              version: ~
                              partitions: []
                          joins: []
                        - relation:
                            Table:
                              name:
                                - value: partsupp
                                  quote_style: ~
                              alias: ~
                              args: ~
                              with_hints: []
                              version: ~
                              partitions: []
                          joins: []
                        - relation:
                            Table:
                              name:
                                - value: orders
                                  quote_style: ~
                              alias: ~
                              args: ~
                              with_hints: []
                              version: ~
                              partitions: []
                          joins: []
                        - relation:
                            Table:
                              name:
                                - value: nation
                                  quote_style: ~
                              alias: ~
                              args: ~
                              with_hints: []
                              version: ~
                              partitions: []
                          joins: []
                      lateral_views: []
                      selection:
                        BinaryOp:
                          left:
                            BinaryOp:
                              left:
                                BinaryOp:
                                  left:
                                    BinaryOp:
                                      left:
                                        BinaryOp:
                                          left:
                                            BinaryOp:
                                              left:
                                                BinaryOp:
                                                  left:
                                                    Identifier:
                                                      value: s_suppkey
                                                      quote_style: ~
                                                  op: Eq
                                                  right:
                                                    Identifier:
                                                      value: l_suppkey
                                                      quote_style: ~
                                              op: And
                                              right:
                                                BinaryOp:
                                                  left:
                                                    Identifier:
                                                      value: ps_suppkey
                                                      quote_style: ~
                                                  op: Eq
                                                  right:
                                                    Identifier:
                                                      value: l_suppkey
                                                      quote_style: ~
                                          op: And
                                          right:
                                            BinaryOp:
                                              left:
                                                Identifier:
                                                  value: ps_partkey
                                                  quote_style: ~
                                              op: Eq
                                              right:
                                                Identifier:
                                                  value: l_partkey
                                                  quote_style: ~
                                      op: And
                                      right:
                                        BinaryOp:
                                          left:
                                            Identifier:
                                              value: p_partkey
                                              quote_style: ~
                                          op: Eq
                                          right:
                                            Identifier:
                                              value: l_partkey
                                              quote_style: ~
                                  op: And
                                  right:
                                    BinaryOp:
                                      left:
                                        Identifier:
                                          value: o_orderkey
                                          quote_style: ~
                                      op: Eq
                                      right:
                                        Identifier:
                                          value: l_orderkey
                                          quote_style: ~
                              op: And
                              right:
                                BinaryOp:
                                  left:
                                    Identifier:
                                      value: s_nationkey
                                      quote_style: ~
                                  op: Eq
                                  right:
                                    Identifier:
                                      value: n_nationkey
                                      quote_style: ~
                          op: And
                          right:
                            Like:
                              negated: false
                              expr:
                                Identifier:
                                  value: p_name
                                  quote_style: ~
                              pattern:
                                Value:
                                  SingleQuotedString: "%green%"
                              escape_char: ~
                      group_by:
                        Expressions: []
                      cluster_by: []
                      distribute_by: []
                      sort_by: []
                      having: ~
                      named_window: []
                      qualify: ~
                  order_by: []
                  limit: ~
                  limit_by: []
                  offset: ~
                  fetch: ~
                  locks: []
                alias:
                  name:
                    value: profit
                    quote_style: ~
                  columns: []
            joins: []
        lateral_views: []
        selection: ~
        group_by:
          Expressions:
            - Identifier:
                value: nation
                quote_style: ~
            - Identifier:
                value: o_year
                quote_style: ~
        cluster_by: []
        distribute_by: []
        sort_by: []
        having: ~
        named_window: []
        qualify: ~
    order_by:
      - expr:
          Identifier:
            value: nation
            quote_style: ~
        asc: ~
        nulls_first: ~
      - expr:
          Identifier:
            value: o_year
            quote_style: ~
        asc: false
        nulls_first: ~
    limit: ~
    limit_by: []
    offset: ~
    fetch: ~
    locks: []

